# pwh_permissions

./: .gitignore  CHANGES.md  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  pythonpackage.yml  tests.yml
pwh_permissions/: __init__.py  pyramid.py
tests/: test_convert_token.py  test_evaluate.py  test_parse.py  test_permitted.py  test_tokenise.py
