[tool.poetry]
name = "pwh_permissions"
version = "0.1.0"
description = "A simple permissions parsing library for Pyramid"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
tox = "^3.14.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
