[tool.poetry]
name = "pwh_permissions"
version = "1.2.1"
description = "A simple permissions parsing library for Python"
authors = ["Mark Hall <mark.hall@work.room3b.eu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
tox = "^3.14.6"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"
pylint = "^2.4.4"

[tool.poetry.extras]
pyramid = ["pyramid", "decorator", "pwh_pyramid_routes"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
